# finstar-pipelines

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  NOTES.md  README.md  airflow_variables.json  astro.env  docker-compose.override.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: example-dag.py  sp500.py  sp500_newsapi.py
notebooks/: 20210711-finwiz-news.ipynb  20210711-load-sp500-data.ipynb  20210711-load-ticker-data.ipynb  20210713-finviz-news-api.ipynb
