[tool.poetry]
name = "finstar-pipelines"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]
license = "\"Apache-2.0\""

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
pendulum = "^2.1.2"
apache-airflow = "~2.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
jupyterlab = "^3.0.16"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
